Used virtual threads and switch to java21